--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=apiserver
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#blabla
